[#17] 프로젝트 팀원 리스트 조회 개발